# window_neopixel_matrix

./: .gitignore  README.md
doc/: raspberrypi_zero_install.odt
freecad/: stripes_aufteilung.FCStd  stripes_aufteilung.FCStd1
pico_neopixel_player/: CMakeLists.txt  LICENSE  README.md  main.c  main.cpp  ws2812.c
raspi_neopixel_player/: CMakeLists.txt  cometrain.cpp  cometrain.h  fire.cpp  fire.h  game_of_life.cpp  game_of_life.h  main.c  main.cpp  pictureshow.cpp  pictureshow.h  pixeltest.cpp  pixeltest.h  plasma.cpp  plasma.h
raspi_software/: CMakeLists.txt  main.cpp
